# graph-sync-agent-kit

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: release.yml  validate.yml
evals/: run.sh
evals/prompts/: curator-content-cluster.md  curator-sitemap-clusters.md  curator-start-new-project.md  curator-static-entities.md  github-workflow-review.md  postprocessor-authoring.md  repo-lifecycle-closeout.md  repo-lifecycle-init.md  yarrrml-review.md
scripts/: sync_versions.py  update_agent_marketplace.py  validate_agent_kit.py
skills/graph-sync-curator/: SKILL.md
skills/graph-sync-curator/agents/: openai.yaml
skills/graph-sync-curator/references/: content-cluster-workflow.md  seo-geo-review.md  sitemap-clustering.md  static-entities.md  validation-loop.md
skills/graph-sync-github-workflow-review/: SKILL.md
skills/graph-sync-github-workflow-review/agents/: openai.yaml
skills/graph-sync-postprocessor-authoring/: SKILL.md
skills/graph-sync-postprocessor-authoring/agents/: openai.yaml
skills/graph-sync-postprocessor-authoring/references/: authoring.md  runtime.md
skills/graph-sync-project/: SKILL.md
skills/graph-sync-project/agents/: openai.yaml
skills/graph-sync-project/references/: ci-checklist.md  cli-resolution.md  mappings.md  overview.md  policy.md  postprocessors.md  troubleshooting.md
skills/graph-sync-repo-lifecycle/: SKILL.md
skills/graph-sync-repo-lifecycle/agents/: openai.yaml
skills/graph-sync-yarrrml-review/: SKILL.md
(+1 files in other folders)
