[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-sync-agent-kit"
version = "0.2.4"
description = "Agent skills for WordLift graph-sync projects."
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "pre-commit>=4.0.0",
  "PyYAML>=6.0.0",
]

[tool.setuptools]
py-modules = []
